[tool.poetry]
name = "xleapp-ios"
version = "0.1.1-alpha.0"
description = "iOS Artifacts for xLEAPP (free)"
authors = ["Jesse Spangenberger <azuleonyx@digitalforensics.io>"]
license = "MIT"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
astc-decomp = "^1.0.3"
bplist = "^1.1"
astc_decomp = "^1.0.3"
blackboxprotobuf = "^1.0.1"
bs4 = "^0.0.1"
nska-deserialize = ">=1.3.1"
pandas = "^1.3.3"
pillow = "^8.3.2"
pyliblzfse = "^0.4.1"

[tool.poetry.dev-dependencies]
xleapp = {path = "../..", develop = true}
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."xleapp.plugins"]
"ios" = "xleapp_ios.plugins:IosPlugin"